5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1613_1805.log
== TEST (2019-04-07 18:14:11) 
-- CODE:
xa=int(input("x de a:"))
ya=int(input("y de a:"))
xb=int(input("x de b:"))
xb=int(input("y de b:"))
print(float((xa+xb)/2))
print(float((ya+yb)/2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(float((ya+yb)/2))
NameError: name 'yb' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 18:14:53) 
-- CODE:
xa=float(input("x de a:"))
ya=float(input("y de a:"))
xb=float(input("x de b:"))
xb=float(input("y de b:"))
print(float((xa+xb)/2))
print(float((ya+yb)/2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(float((ya+yb)/2))
NameError: name 'yb' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 18:15:29) 
-- CODE:
xa=float(input("x de a:"))
ya=float(input("y de a:"))
xb=float(input("x de b:"))
yb=float(input("y de b:"))
print(float((xa+xb)/2))
print(float((ya+yb)/2))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 18:15:56) 
-- CODE:
xa=float(input("x de a:"))
ya=float(input("y de a:"))
xb=float(input("x de b:"))
yb=float(input("y de b:"))
print(float((xa+xb)/2))
print(float((ya+yb)/2))
-- EXECUTION TIME:
0.1239
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 18:17:42) 
-- CODE:
xa=float(input("x de a:"))
ya=float(input("y de a:"))
xb=float(input("x de b:"))
yb=float(input("y de b:"))
xm=(xa+xb)/2
ym=(ya+yb)/2
print(float(xm))
print(float(ym))
-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 18:18:12) 
-- CODE:
xa=float(input("x de a:"))
ya=float(input("y de a:"))
xb=float(input("x de b:"))
yb=float(input("y de b:"))
xm=(xa+xb)/2
ym=(ya+yb)/2
print(float(xm))
print(float(ym))
-- EXECUTION TIME:
0.152958
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 18:19:06) 
-- CODE:
xa=float(input("x de a:"))
ya=float(input("y de a:"))
xb=float(input("x de b:"))
yb=float(input("y de b:"))
xm=(xa+xb)/2
ym=(ya+yb)/2
print(float(round(xm)))
print(float(round(ym)))
-- EXECUTION TIME:
0.121055
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.0
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
4.0
2.0
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.0
3.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 18:19:38) 
-- CODE:
xa=float(input("x de a:"))
ya=float(input("y de a:"))
xb=float(input("x de b:"))
yb=float(input("y de b:"))
xm=(xa+xb)/2
ym=(ya+yb)/2
print(float(round(xm,1)))
print(float(round(ym,1)))
-- EXECUTION TIME:
0.149231
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
x de a:y de a:x de b:y de b:2.3
3.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:35:09) 
-- CODE:
xa=float(input("x de a:"))
ya=float(input("y de a:"))
xb=float(input("x de b:"))
yb=float(input("y de b:"))
xm=(xa+xb)/2
ym=(ya+yb)/2
print(round(xm,1))
print(round(ym,1))
-- EXECUTION TIME:
0.148021
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 18:36:05) 
-- CODE:
xa=float(input("x de a:"))
ya=float(input("y de a:"))
xb=float(input("x de b:"))
yb=float(input("y de b:"))
xm=(xa+xb)/2
ym=(ya+yb)/2
print(float(round(xm,1)))
print(float(round(ym,1)))
-- EXECUTION TIME:
0.204295
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
